--- a/demo-springcloud-m2-configserver-client/src/main/resources/templates/rateview.html
+++ b/demo-springcloud-m2-configserver-client/src/main/resources/templates/rateview.html
@@ -10,7 +10,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <h1>Spring Cloud Training</h1>
-                <p th:text="'Your rate is: ' + ${rateamount} + ', number of lanes is ' + ${lanes} + ', toll start time is ' + ${tollstart}"></p>
+                <p th:text="'Your rate is: ' + ${rateamount} + ', number of lanes is ' + ${lanes} + ', toll start time is ' + ${tollstart} + ' and encrypted value is ' + ${connstring}"></p>
             </div>
             <div class="col-md-2"></div>
         </div>
